--- a/BirdSong/res/layout/activity_listen.xml
+++ b/BirdSong/res/layout/activity_listen.xml
@@ -6,11 +6,16 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".DisplayMessageActivity" >
+    tools:context=".ListenActivity" >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
-
+        android:text="@string/listening" />
+	<Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/button_stop_listening"
+        android:onClick="endListen" />
+    
 </RelativeLayout>
