--- a/BirdSong/res/layout/activity_listen.xml
+++ b/BirdSong/res/layout/activity_listen.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -9,13 +10,18 @@
     tools:context=".ListenActivity" >
 
     <TextView
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/listening" />
-	<Button
+
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/button_stop_listening"
-        android:onClick="endListen" />
-    
+        android:layout_alignLeft="@+id/textView1"
+        android:layout_below="@+id/textView1"
+        android:minHeight="0dp"
+        android:onClick="endListen"
+        android:text="@string/button_stop_listening" />
+
 </RelativeLayout>
