--- a/BirdSong/res/layout/activity_main.xml
+++ b/BirdSong/res/layout/activity_main.xml
@@ -8,10 +8,11 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
-	<TextView android:id="@+id/edit_message"
+    
+	<TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="@string/home_screen" />
+        android:text="@string/home_screen" />
 	<Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
